--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -829,9 +829,6 @@ $BigShadow: 0px 8px 24px #00000020;
 .txttt {
   width: 180px;
 }
-.swiper-wrapper {
-  margin-top: 48px;
-}
 .fav-add {
   background-color: #1da1f2;
   outline: none;
@@ -847,8 +844,7 @@ $BigShadow: 0px 8px 24px #00000020;
   .Users {
     position: relative;
     display: block;
-    border-radius: 4px;
-    padding: 5px;
+    border-radius: .3rem;
     margin-left: 10px;
     height: 89vh;
     overflow-x: auto;
@@ -864,6 +860,9 @@ $BigShadow: 0px 8px 24px #00000020;
       color: $black-color;
       width: 100%;
       margin-bottom: 10px;
+      h5 {
+        color: $white-color;
+      }
       .closeUsers {
         display: none;
         width: 30px;
@@ -871,12 +870,12 @@ $BigShadow: 0px 8px 24px #00000020;
         border-radius: 100%;
         align-items: center;
         justify-content: center;
-        background-color: $black-color;
-        cursor: pointer;
+        background-color: $white-color;
         i {
-          color: $white-color;
+          color: #4b93ff;
           font-size: 18px;
         }
+        cursor: pointer;
       }
     }
     @media (max-width: 992px) {
@@ -964,11 +963,17 @@ $BigShadow: 0px 8px 24px #00000020;
   .chatTop {
     box-shadow: 0px 3px 5px #00000030;
     display: flex;
+    border-radius: .3rem .3rem 0 0;
     align-items: center;
     position: relative;
     z-index: 2;
+    height: 69px;
     padding: 20px;
-    background-color: $mainColor;
+    background-color: #4b93ff;
+    h6 {
+      margin: 0;
+      color: #fff;
+    }
     color: #fff;
     position: relative;
     img {
@@ -1018,7 +1023,7 @@ $BigShadow: 0px 8px 24px #00000020;
       z-index: 2;
       background-color: #00000020;
     }
-    height: 80vh;
+    height: 78.5vh;
     .chatBody {
       position: relative;
       z-index: 3;
@@ -1048,7 +1053,7 @@ $BigShadow: 0px 8px 24px #00000020;
         }
         .sendMassage {
           padding: 10px;
-          background-color: $mainColor;
+          background-color: #4b93ff;
           border-radius: 8px 0px 8px 8px;
           margin-bottom: 10px;
           position: relative;
@@ -1075,7 +1080,7 @@ $BigShadow: 0px 8px 24px #00000020;
             top: 0px;
             bottom: auto;
             border: 12px solid;
-            border-color: $mainColor transparent transparent transparent;
+            border-color: #4b93ff transparent transparent transparent;
           }
         }
       }
@@ -1144,8 +1149,9 @@ $BigShadow: 0px 8px 24px #00000020;
         height: 47px;
         padding: 10px 15px 10px 50px;
         border: none;
-        color: #888;
+        color: $black-color;
         overflow: hidden;
+        border-radius: 0 0 .3rem .3rem;
       }
       .chat-submit {
         position: absolute;
@@ -1155,7 +1161,7 @@ $BigShadow: 0px 8px 24px #00000020;
         box-shadow: none;
         border: none;
         border-radius: 50%;
-        color: $mainColor;
+        color: #4b93ff;
         transform: scaleX(-1);
         width: 35px;
         height: 35px;
@@ -1175,5 +1181,178 @@ $BigShadow: 0px 8px 24px #00000020;
     animation-fill-mode: both;
     animation-name: slideOutRight !important;
     animation-delay: 0s;
+  }
+}
+.chatTop {
+  box-shadow: 0px 3px 5px #00000030;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+  padding: 10px 20px;
+  background-color: $secondColor;
+  color: #fff;
+  position: relative;
+  img {
+    width: 40px;
+    height: 40px;
+    border: 3px solid #fff;
+    border-radius: 100%;
+    box-shadow: 0px 0px 5px #00000030;
+    margin: 0px 10px;
+    object-fit: cover;
+    object-position: top;
+  }
+}
+.defaultBtn {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  overflow: hidden;
+  z-index: 1;
+  background-color: #4b93ff;
+  color: $white-color;
+  transition: $transition;
+  border-radius: .3rem;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  margin-bottom: 20px;
+}
+.floatBtns {
+  position: fixed;
+  left: 0px;
+  top: 54%;
+  transform: translateY(-50%);
+  z-index: 99;
+  a {
+    cursor: pointer;
+    background-color: var(--darkColor);
+    color: var(--whiteColor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    font-size: 16px;
+  }
+  .main {
+    position: relative;
+    z-index: 2;
+    width: 44px;
+    height: 44px;
+    background-color: var(--whiteColor);
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    color: #4267b2;
+    border-radius: 0 100% 100% 0;
+  }
+  .subs {
+    a {
+      box-shadow: none;
+      position: absolute;
+      left: 10px;
+      top: 0;
+      opacity: 0;
+      visibility: hidden;
+      transform: translateX(0px) translateY(0px);
+      border: 1px solid var(--whiteColor);
+      &:nth-child(1) {
+        transition-delay: 0.2s, 0s, 0.2s;
+      }
+      &:nth-child(2) {
+        transition-delay: 0.3s, 0s, 0.3s;
+      }
+      &:nth-child(3) {
+        transition-delay: 0.4s, 0s, 0.4s;
+      }
+      &:nth-child(4) {
+        transition-delay: 0.5s, 0s, 0.5s;
+      }
+      &:nth-child(5) {
+        transition-delay: 0.6s, 0s, 0.6s;
+      }
+      &:nth-child(6) {
+        transition-delay: 0.7s, 0s, 0.7s;
+      }
+      &:nth-child(7) {
+        transition-delay: 0.8s, 0s, 0.8s;
+      }
+    }
+  }
+  &:hover {
+    .subs {
+      a {
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        opacity: 1;
+        visibility: visible;
+        &:nth-child(1) {
+          transform: translateX(0px) translateY(-100px);
+        }
+        &:nth-child(2) {
+          transform: translateX(50px) translateY(-86.6px);
+        }
+        &:nth-child(3) {
+          transform: translateX(86.6px) translateY(-50px);
+        }
+        &:nth-child(4) {
+          transform: translateX(100px) translateY(-0px);
+        }
+        &:nth-child(5) {
+          transform: translateX(86.6px) translateY(+50px);
+        }
+        &:nth-child(6) {
+          transform: translateX(50px) translateY(+86.6px);
+        }
+        &:nth-child(7) {
+          transform: translateX(0px) translateY(+100px);
+        }
+      }
+    }
+  }
+}
+.Recruitment-references {
+  background-image: url("../images/pattern-1.webp");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  h4 {
+    font-size: 32px;
+  }
+  .col-12 {
+    padding: 24px;
+    border-radius: 14px;
+    h5 {
+      margin-bottom: 32px;
+      color: $mainColor;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      li {
+        display: flex;
+        margin-bottom: 14px;
+        gap: 12px;
+        align-items: center;
+        .icon{
+          width: 45px;
+          height: 45px;
+          border-radius:50% ;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: $mainColor;
+          i{
+            font-size: 18px;
+            color: $white-color;
+            
+          }
+        }
+        span{
+          font-size: 16px;
+          color: $black-color;
+          font-weight: 600;
+        }
+      }
+    }
   }
 }
